fix: [CDS-78831]: add width as fit-content to parent container to prevent overlapping of data (#17777)
* fix: add width fit-content to parent container
* fix: snapshot tests

--- a/src/modules/70-pipeline/components/ServiceExecutionsCard/ServiceExecutionsCard.module.scss
+++ b/src/modules/70-pipeline/components/ServiceExecutionsCard/ServiceExecutionsCard.module.scss
@@ -70,6 +70,10 @@
     font-size: var(--font-size-small);
     color: var(--grey-800);
 
+    .serviceArtifact {
+      width: fit-content;
+    }
+
     p {
       color: var(--primary-7) !important;
       font-weight: 500 !important;
